# deli

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  LICENSE  README.md  README.rst  docker-compose.yaml  kubeconfig.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  trigger_docker_build.sh
counter/: .env-sample  docker-entrypoint.sh  wsgi.ini
deli/cache/: __init__.py  client.py
deli/counter/: settings.py
deli/counter/auth/: driver.py  manager.py  permission.py  policy.py  token.py
deli/counter/auth/validation_models/: builtin.py  database.py  github.py
deli/counter/cli/: app.py  main.py
deli/counter/cli/commands/: gen_admin.py
deli/counter/http/: app.py  router.py  wsgi.py
deli/http/: app.py  app_mount.py  request_methods.py  route.py  router.py
deli/http/errors/: validation.py
deli/http/schematics/: types.py
deli/http/tools/: model.py  param_validation.py
deli/kubernetes/: controller.py  informer.py  workqueue.py
deli/kubernetes/election/: elector.py  record.py
deli/kubernetes/resources/: const.py  model.py  project.py
deli/manager/: vmware.py
deli/manager/cli/: app.py  main.py
deli/manager/cli/commands/: run.py
deli/menu/cli/: app.py  main.py
deli/menu/metadata/: driver.py  vm_client.py
deli/menu/models/: out_of_band.py
deli/menu/vspc/: async_telnet.py  server.py  vm_client.py
docker/counter/: .env-sample  Dockerfile  docker-entrypoint.sh  wsgi.ini
docker/manager/: .env-sample  Dockerfile  docker-entrypoint.sh
docker/menu/: .env-sample  Dockerfile  docker-entrypoint.sh
menu/: wsgi.ini
(+115 files in other folders)
