[metadata]
name = sandwichcloud-deli
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = API, Metadata and Controller for Sandwich Cloud
description-file = README.rst
home-page = https://github.com/sandwichcloud/deli
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[files]
packages =
    deli

[entry_points]
console_scripts =
    deli_counter = deli.counter.cli.main:main
    deli_manager = deli.manager.cli.main:main
    deli_menu = deli.menu.cli.main:main

[pbr]
skip_authors = 1
skip_changelog = 1